@@ -1,3 +1,7 @@
+2011-01-12  Bernd Hufmann  <bhufmann@gmail.com> Fix for Bug 333114
+
+	* src/org/eclipse/linuxtools/lttng/ui/views/statistics/model/KernelStatisticsData.java: Update statistic handling for processes that change name at event of type "exec" and after fork 
+
 2011-01-12  Bernd Hufmann  <bhufmann@gmail.com> Fix or Bug 333486
 
 	* src/org/eclipse/linuxtools/lttng/ui/views/common/AbsTimeUpdateView.java (synchToTime): Added missing update of ParamsUpdater 
